# fut_sniping_bot

./: .env  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  bot.py  email_manager.py  helpers.py
